[package]
name = "fy-cli-rust"
version = "0.1.0"
authors = ["Kreedzt <zhaozisong1@live.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Kreedzt/fy-cli-rust"
license = "MIT"
license-file = "LICENSE"
description = "Rust 命令行翻译工具(使用有道 API)"
keywords = ["翻译", "cli", "命令行", "有道"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0"
dirs = "3.0.1"
sha2 = "0.9"
clap = "3.0.0-beta.2"